# maskfusion

./: .clang-format  .gitignore  CMakeLists.txt  LICENCES.txt  README.md  build.sh  config.toml.in
CMakeModules/: MaskFusionConfig.cmake  libmaskfusionConfig.cmake
Core/: CMakeLists.txt  Callbacks.h  Ferns.cpp  Ferns.h  FrameData.cpp  FrameData.h  GPUTexture.cpp  GPUTexture.h  MaskFusion.cpp  MaskFusion.h  PoseMatch.h
Core/Cuda/: convenience.cuh  cudafuncs.cu  cudafuncs.cuh  reduce.cu  segmentation.cu  segmentation.cuh
Core/Cuda/containers/: device_array.hpp  device_array_impl.hpp  device_memory.cpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp
Core/Model/: Buffers.h  Deformation.cpp  Deformation.h  GlobalProjection.cpp  GlobalProjection.h  Model.cpp  Model.h  ModelMatching.h  ModelProjection.cpp  ModelProjection.h
Core/Segmentation/: CfSegmentation.cpp  CfSegmentation.h  ConnectedLabels.hpp  MfSegmentation.cpp  MfSegmentation.h  PreSegmentation.cpp  PreSegmentation.h  Segmentation.cpp  Segmentation.h  SegmentationPerformer.h  SegmentationResult.h  Slic.cpp  Slic.h
Core/Segmentation/MaskRCNN/: MaskRCNN.cpp  MaskRCNN.h  MaskRCNN.py.in  helpers.py  offline_runner.py
Core/Shaders/: ComputePack.cpp  ComputePack.h  FeedbackBuffer.cpp  FeedbackBuffer.h  FillIn.cpp  FillIn.h  Resize.cpp  Resize.h  Shaders.h  Uniform.h  Vertex.cpp  Vertex.h  color_table.glsl  combo_splat.frag  combo_splat_models.frag  copy_unstable.vert  data.geom  data.vert  depth_bilateral_metric.frag  depth_metric.frag  depth_norm.frag  draw_feedback.vert  draw_global_surface.geom  draw_global_surface.vert  fill_normal.frag  fill_rgb.frag  fill_vertex.frag  geometry.glsl  index_map.vert  int_to_color.frag  splat.vert  splat_models.vert  update.vert  vertex_feedback.vert
Core/Utils/: BoundingBox.h  CholeskyDecomp.cpp  CholeskyDecomp.h  DeformationGraph.cpp  DeformationGraph.h  GPUConfig.h  Gnuplot.cpp  Gnuplot.h  GraphNode.h  Img.h  Intrinsics.h  Jacobian.h  Macros.h  OdometryProvider.h  OpenGLErrorHandling.h  OrderedJacobianRow.h  Parse.cpp  Parse.h  RGBDOdometry.cpp  RGBDOdometry.h  Resolution.h  Stopwatch.h
GUI/: CMakeLists.txt  FindOpenNI2.cmake  Findefusion.cmake  Main.cpp  MainController.cpp  MainController.h
GUI/Tools/: FreenectLiveReader.cpp  FreenectLiveReader.h  GUI.h  GroundTruthOdometry.cpp  GroundTruthOdometry.h  ImageLogReader.cpp  ImageLogReader.h  JPEGLoader.h  KlgLogReader.cpp  KlgLogReader.h  LogReader.h  OpenNI2Interface.cpp  OpenNI2Interface.h  OpenNI2LiveReader.cpp  OpenNI2LiveReader.h  PangolinReader.cpp  PangolinReader.h  RealsenseLiveReader.cpp  RealsenseLiveReader.h  ThreadMutexObject.h
Tools/: CMakeLists.txt  sequence_add_bbox_labels.cpp
